# sol-ui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PR_SUMMARY.md  README.md  claude.md  codecov.yml
.claude/: settings.json
.github/workflows/: ci.yml  daily-perf-improver.lock.yml  daily-perf-improver.md  daily-test-improver.lock.yml  daily-test-improver.md
coverage/: cobertura.xml  index.html
dev-log/: 2025_07_09.md
docs/: MACOS_PACKAGING.md
examples/: assistant.rs  async_tasks.rs  box_model.rs  button_demo.rs  checkbox_demo.rs  culling.rs  debug_tools.rs  drag_drop_demo.rs  dropdown_demo.rs  glow_shader.rs  interactive_ui.rs  ios_basic.rs  keyboard_input.rs  list_demo.rs  menu_demo.rs  modal_demo.rs  persistence_demo.rs  raw_layer.rs  reactive_state.rs  readme_example.rs  scroll_test.rs  shortcuts_demo.rs  simple_animation.rs  simple_shader.rs  text_input_demo.rs  toast_demo.rs  todo_app.rs  tooltip_demo.rs  undo_redo.rs  window_management.rs
plan/: ios_support.md
resources/macos/: Info.plist  entitlements.plist
scripts/: generate-icon.sh  package-macos.sh
src/: app.rs  color.rs  draw.rs  element.rs  elements.rs  geometry.rs  layer.rs  layout.rs  layout_engine.rs  layout_id.rs  lib.rs  main.rs  metal_renderer.rs  paint.rs  platform.rs  render.rs  storage.rs  style.rs  taffy.rs  task.rs  testing.rs  text_system.rs  undo.rs
src/debug/: bounds_overlay.rs  console.rs  hit_test_viz.rs  layout_inspector.rs  metrics.rs  mod.rs  state.rs
src/element/: button.rs  checkbox.rs  container.rs  dropdown.rs  icon.rs  list.rs  modal.rs  scroll.rs  text.rs  text_input.rs  toast.rs  tooltip.rs
src/entity/: computed.rs  context.rs  derived.rs  mod.rs  observe.rs  state_cell.rs  store.rs  subscription.rs
tasks/: plan.md  window_and_rendering.md
(+30 files in other folders)
