[package]
name = "toy-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
glam = "0.30.4"
metal = "0.32.0"
objc = "0.2.7"
palette = "0.7.6"
parley = "0.5.0"
pathfinder_geometry = "0.5.1"
swash = "0.2.5"
taffy = "0.8.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "culling"
path = "examples/culling.rs"
