[package]
name = "sol-ui"
description = "An exploratory hybrid 2d/3d ui framework for macOS"
version = "0.0.1"
edition = "2024"
categories = ["graphics", "gui", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamnbutler/sol-ui"

[dependencies]
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
glam = "0.30.4"
metal = "0.32.0"
objc = "0.2.7"
palette = "0.7.6"
parley = "0.5.0"
pathfinder_geometry = "0.5.1"
swash = "0.2.5"
taffy = "0.8.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "interactive_ui"
path = "examples/interactive_ui.rs"

[[example]]
name = "raw_layer"
path = "examples/raw_layer.rs"

[[example]]
name = "readme_example"
path = "examples/readme_example.rs"

[[example]]
name = "simple_animation"
path = "examples/simple_animation.rs"

[[example]]
name = "simple_shader"
path = "examples/simple_shader.rs"

[[example]]
name = "glow_shader"
path = "examples/glow_shader.rs"

[[example]]
name = "checkbox_demo"
path = "examples/checkbox_demo.rs"

[[example]]
name = "keyboard_input"
path = "examples/keyboard_input.rs"

[[example]]
name = "async_tasks"
path = "examples/async_tasks.rs"
